Release 3.10.0 (?? ?????? 201?)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3.10.0 is not yet released.

* ================== PLATFORM CHANGES =================

* Support for Android on MIPS32.
* Support for 64bit FPU on MIPS32 platforms.

* ==================== TOOL CHANGES ====================

* Memcheck:
  - new client requests 
    VALGRIND_DISABLE_ADDR_ERROR_REPORTING_IN_RANGE and
    VALGRIND_ENABLE_ADDR_ERROR_REPORTING_IN_RANGE
  - new leak check heuristic 'length64' to detect interior pointers
    pointing at offset 64bit of a block, when the first 8 bytes contains
    the block size - 8. This is e.g. used by sqlite3MemMalloc.
  - if a syscall param (e.g. bind struct sockaddr, sendmsg struct msghdr,
    ...) has several fields not initialised, an error is now reported for
    each field. Previously, an error was reported only for the first wrong
    field.
  - new flag --show-mismatched-frees=no|yes [yes], to optionally disable
    allocator/deallocator mismatch checking.

* Helgrind:
  - Race condition error message with allocated blocks also show
    the thread nr that allocated the racy block.
  - All locks referenced by an error message are now announced.
    Previously, some error messages were just showing the lock addresses.
  - The message indicating where a lock was first observed now also
    describes the address/location of the lock.
  - Helgrind now understands the Ada task termination rules
    and creates a 'H-B relationship' between a terminated task and
    its master. This avoids some false positive and avoids big
    memory usage when a lot of Ada tasks are created and terminated.
    The interceptions are only activated with forthcoming releasses of
    gnatpro >= 7.3.0w-20140611 and gcc >= 5.0.
  - Helgrind GDB server monitor command 'info locks' giving
    the list of locks, their location, and their status.

* Callgrind:
  - callgrind_control now supports the --vgdb-prefix argument,